ahora parte de la reserva

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,8 +38,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="scripts.js"></script>
-
+    <script src="/js/cars.js"></script> <!-- Incluye el script aquí -->
     <script>
         document.getElementById('logout-button').addEventListener('click', function() {
             window.location.href = '/login.html';
