--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
 <body>
     <div class="sidebar">
@@ -32,7 +34,12 @@
             <input type="text" id="pickup-time" placeholder="Hora de recogida" class="input-time">
             <input type="text" id="return-date" placeholder="Fecha de devolución" class="input-date">
             <input type="text" id="return-time" placeholder="Hora de devolución" class="input-time">
-            <button class="search-button">Buscar</button>
+            
+            <!--NUEVO CAMPO DE COMENTARIO-->
+            <textarea id="comments" placeholder="Añadir comentarios" class="input-comment"></textarea>
+            
+            <button class="reserve-button">Reservar</button>
+            <button class="search-button">Entregar</button>
         </div>
         <div id="car-list"></div>
     </main>
